更新底部联系方式

--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -26,7 +26,7 @@
             let date = new Date()
             let year = date.getFullYear()
             $('.year').text(year)
-            $('.indexLink').attr('href', location.protocol + '//' + document.domain + ':' + location.port)
+            // $('.indexLink').attr('href', location.protocol + '//' + document.domain + ':' + location.port)
         });
     </script>
 </head>
@@ -98,8 +98,9 @@
         {% block footer %}
         <footer>
             <p class="float-left">
-                <small> &copy; <span class="year"></span> <a class="indexLink" href="http://124.223.224.49:5000"
-                        title="Written by L-ING">L-ING</a> -
+                <small> &copy; <span class="year"></span> <a class="indexLink" href="http://124.223.224.49:5000">L-ING</a> -
+                    <a href="https://github.com/hlf20010508" target="_blank">Github</a> -
+                    <a href="https://gitee.com/hlf01" target="_blank">Gitee</a> -
                     <a href="https://www.zhihu.com/people/huang-ling-feng-7-16" target="_blank">Zhihu</a> -
                     <a href="http://helloflask.com" title="A HelloFlask project" target="_blank">HelloFlask</a>
                 </small>
