--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -104,9 +104,7 @@
                 <small> &copy; <span class="year"></span> <a class="indexLink"
                         href="http://124.223.224.49:5000">L-ING</a> -
                     <a href="https://github.com/hlf20010508" target="_blank">Github</a> -
-                    <a href="https://gitee.com/hlf01" target="_blank">Gitee</a> -
-                    <a href="https://www.zhihu.com/people/huang-ling-feng-7-16" target="_blank">Zhihu</a> -
-                    <a href="http://helloflask.com" title="A HelloFlask project" target="_blank">HelloFlask</a>
+                    <a href="https://www.zhihu.com/people/huang-ling-feng-7-16" target="_blank">Zhihu</a>
                 </small>
             </p>
             <p class="float-right">
