--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -62,6 +62,7 @@
                                 {% endif %}
                             </a>
                             <a class="dropdown-item" href="{{ url_for('admin.manage_link') }}">Link</a>
+                            <a class="dropdown-item" href="{{url_for('blog.clear_image_cache')}}">Clear Image Cache</a>
                         </div>
                     </li>
                     {{ render_nav_item('admin.settings', 'Settings') }}
