--- a/bluelog/templates/blog/post.html
+++ b/bluelog/templates/blog/post.html
@@ -28,6 +28,8 @@
     <div class="row">
         <div class="col-sm-8">
             {{ post.body|safe }}
+            <script type="text/javascript" src="{{ url_for('static', filename='js/highlight.min.js') }}"></script>
+            <script>hljs.highlightAll();</script>
             <hr>
             <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target=".postLinkModal">Share
             </button>
