--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -13,7 +13,7 @@
         type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/highlight.min.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/ckeditor-contents.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='cherry-markdown/cherry-markdown.min.css') }}" type="text/css">
     {% endblock head %}
 </head>
 
