--- a/bluelog/templates/blog/about.html
+++ b/bluelog/templates/blog/about.html
@@ -7,7 +7,7 @@
         <h1>About</h1>
     </div>
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-8 markdown-body">
             {{ about|safe }}
         </div>
         <div class="col-sm-4 sidebar">
