取消评论审核，更改评论区样式

--- a/bluelog/templates/admin/manage_comment.html
+++ b/bluelog/templates/admin/manage_comment.html
@@ -45,7 +45,7 @@
                     <td>{{ loop.index + ((pagination.page - 1) * config['BLUELOG_COMMENT_PER_PAGE']) }}</td>
                     <td>
                         {% if comment.from_admin %}{{ admin.name }}{% else %}{{ comment.author }}{% endif %}<br>
-                        {% if comment.site %}
+                        {% if comment.site and not comment.from_admin%}
                             <a href="{{ comment.site }}" target="_blank">
                                 {{ comment.site }}
                             </a><br>
@@ -59,14 +59,11 @@
                     <td>{{ comment.body }}</td>
                     <td>{{ moment(comment.timestamp).format('LL') }}</td>
                     <td>
-                        {% if not comment.reviewed %}
-                            <form class="inline" method="post"
-                                  action="{{ url_for('.approve_comment', comment_id=comment.id, next=request.full_path) }}">
-                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                                <button type="submit" class="btn btn-success btn-sm">Approve</button>
-                            </form>
-                        {% endif %}
-                        <a class="btn btn-info btn-sm" href="{{ url_for('blog.show_post', post_id=comment.post.id) }}">Post</a>
+                        <form class="inline" method="post"
+                                action="{{ url_for('.check_comment', comment_id=comment.id, next=request.full_path) }}">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                            <button type="submit" class="btn btn-success btn-sm">Check</button>
+                        </form>
                         <form class="inline" method="post"
                               action="{{ url_for('.delete_comment', comment_id=comment.id, next=request.full_path) }}">
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
