--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -29,18 +29,8 @@
                 <ul class="navbar-nav mr-auto">
                     {{ render_nav_item('blog.index', 'Home') }}
                     {{ render_nav_item('blog.about', 'About') }}
-                </ul>
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="nav-item">
-                        <form class="inline" action="{{ url_for('blog.search') }}">
-                            <input type="text" name="content" required>
-                            <button type="submit">
-                                <span class="oi oi-magnifying-glass">search</span>
-                            </button>
-                        </form>
-                    </li>
                     {% if current_user.is_authenticated %}
+                    {{ render_nav_item('admin.settings', 'Settings') }}
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
                             aria-haspopup="true" aria-expanded="false">
@@ -72,9 +62,14 @@
                             <a class="dropdown-item" href="{{ url_for('admin.manage_link') }}">Link</a>
                         </div>
                     </li>
-                    {{ render_nav_item('admin.settings', 'Settings') }}
                     {% endif %}
                 </ul>
+                <form class="d-flex" action="{{ url_for('blog.search') }}">
+                        <input type="text" class="form-control me-sm-2" name="content" required>
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">
+                            search
+                        </button>
+                </form>
             </div>
         </div>
     </nav>
