--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -65,7 +65,7 @@
                     {% endif %}
                 </ul>
                 <form class="d-flex" action="{{ url_for('blog.search') }}">
-                        <input type="text" class="form-control me-sm-2" name="content" required>
+                        <input type="text" class="form-control" name="content" required>
                         <button class="btn btn-secondary my-2 my-sm-0" type="submit">
                             search
                         </button>
