修复移动端搜索框样式问题

--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -65,10 +65,10 @@
                     {% endif %}
                 </ul>
                 <form class="d-flex" action="{{ url_for('blog.search') }}">
-                        <input type="text" class="form-control" name="content" required>
-                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">
-                            search
-                        </button>
+                    <input type="text" class="form-control me-sm-2" name="content" required>
+                    <button class="btn btn-secondary" type="submit">
+                        search
+                    </button>
                 </form>
             </div>
         </div>
