设置github样式主题仅为白色
调整侧边栏，使其在移动端移到文章列表下方时宽度一致

--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/highlight.min.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/easymde.min.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/github-markdown.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/github-markdown-light.css') }}" type="text/css">
     {% endblock head %}
 </head>
 <body>
