--- a/bluelog/templates/blog/about.html
+++ b/bluelog/templates/blog/about.html
@@ -6,11 +6,11 @@
     <div class="page-header">
         <h1>About</h1>
     </div>
-    <div class="row">
+    <div class="row" style="justify-content: space-between;">
         <div class="col-sm-8 markdown-body">
             {{ about|safe }}
         </div>
-        <div class="col-sm-4 sidebar">
+        <div class="col-sm-4">
             {% include "blog/_sidebar.html" %}
         </div>
     </div>
