--- a/bluelog/templates/blog/post.html
+++ b/bluelog/templates/blog/post.html
@@ -101,17 +101,25 @@
                                 {%- endif -%}
                                 <div class="mb-1 markdown-body">{{ comment.body|safe }}</div>
                                 <div class="float-right">
-                                    <a class="btn btn-light btn-sm"
-                                       href="{{ url_for('.reply_comment', comment_id=comment.id) }}">Reply</a>
                                     {% if current_user.is_authenticated %}
-                                        <a class="btn btn-light btn-sm" href="mailto:{{ comment.email }}">Email</a>
-                                        <form class="inline" method="post"
-                                              action="{{ url_for('admin.delete_comment', comment_id=comment.id, next=request.full_path) }}">
-                                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                                            <button type="submit" class="btn btn-danger btn-sm"
-                                                    onclick="return confirm('Are you sure?');">Delete
-                                            </button>
-                                        </form>
+                                    {% if not comment.reviewed %}
+                                    <form class="inline" method="post"
+                                            action="{{ url_for('admin.check_post_comment', comment_id=comment.id, total=pagination.total, next=request.full_path) }}">
+                                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                                        <button type="submit" class="btn btn-success btn-sm">Checked</button>
+                                    </form>
+                                    {% endif %}
+                                    {% endif %}
+                                    <a class="btn btn-light btn-sm" href="{{ url_for('.reply_comment', comment_id=comment.id) }}">Reply</a>
+                                    {% if current_user.is_authenticated %}
+                                    <a class="btn btn-light btn-sm" href="mailto:{{ comment.email }}">Email</a>
+                                    <form class="inline" method="post"
+                                            action="{{ url_for('admin.delete_post_comment', comment_id=comment.id, total=pagination.total, next=request.full_path) }}">
+                                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                                        <button type="submit" class="btn btn-danger btn-sm"
+                                                onclick="return confirm('Are you sure?');">Delete
+                                        </button>
+                                    </form>
                                     {% endif %}
                                 </div>
                             </li>
@@ -133,6 +141,7 @@
             {% if post.can_comment %}
                 <div id="comment-form">
                     <form action="{{ request.full_path }}" method="post" class="form" role="form" novalidate>
+                        <input type="text" name="total" value="{{ pagination.total }}" hidden>
                         {{ render_form(form) }}
                     </form>
                 </div>
