调整移动端顶部managex下拉与搜索框的间距和文章详情页评论提交按钮与移到下方的侧边栏的间距

--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -50,7 +50,7 @@
                             <span class="badge badge-success">new</span>
                             {% endif %}
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="margin-bottom: 10px;">
                             <a class="dropdown-item" href="{{ url_for('admin.manage_post') }}">Post</a>
                             <a class="dropdown-item" href="{{ url_for('admin.manage_category') }}">Category</a>
                             <a class="dropdown-item" href="{{ url_for('admin.manage_comment') }}">
