--- a/bluelog/templates/blog/post.html
+++ b/bluelog/templates/blog/post.html
@@ -139,7 +139,7 @@
                 </div>
             {% endif %}
             {% if post.can_comment %}
-                <div id="comment-form">
+                <div id="comment-form" style="margin-bottom: 20px;">
                     <form action="{{ request.full_path }}" method="post" class="form" role="form" novalidate>
                         <input type="text" name="total" value="{{ pagination.total }}" hidden>
                         {{ render_form(form) }}
