--- a/bluelog/templates/base.html
+++ b/bluelog/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet"
         href="{{ url_for('static', filename='css/%s.min.css' % request.cookies.get('theme', 'perfect_blue')) }}"
         type="text/css">
+    <link rel="icon" href="{{ url_for('static', filename='icon.png') }}" type="image/x-icon"/>
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/highlight.min.css') }}" type="text/css">
