--- a/bluelog/templates/admin/new_post.html
+++ b/bluelog/templates/admin/new_post.html
@@ -7,9 +7,7 @@
     <div class="page-header">
         <h1>New Post</h1>
     </div>
-    <form action="" method="post" class="form" role="form" novalidate>
-        {{ render_form(form) }}
-    </form>
+    {{ render_form(form, novalidate=True) }}
 {% endblock %}
 
 {% block scripts %}
