--- a/blog/templates/blog/_sidebar.html
+++ b/blog/templates/blog/_sidebar.html
@@ -29,7 +29,7 @@
 
 <div class="dropdown">
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        {% for theme_name, display_name in config.BLUELOG_THEMES.items() %}
+        {% for theme_name, display_name in config.BLOG_THEMES.items() %}
             <a class="dropdown-item"
                href="{{ url_for('blog.change_theme', theme_name=theme_name, next=request.full_path) }}">
                 {{ display_name }}</a>
