--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -87,7 +87,7 @@
         <footer>
             <p class="float-left">
                 <small> &copy; <span class="year"></span> <a class="indexLink"
-                        href="http://124.223.224.49:5000">L-ING</a> -
+                        href="http://blog.hlf01.site">L-ING</a> -
                     <a href="https://github.com/hlf20010508" target="_blank">Github</a> -
                     <a href="https://www.zhihu.com/people/huang-ling-feng-7-16" target="_blank">Zhihu</a>
                 </small>
