底部去除主页链接

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -86,8 +86,7 @@
         {% block footer %}
         <footer>
             <p class="float-left">
-                <small> &copy; <span class="year"></span> <a class="indexLink"
-                        href="http://blog.hlf01.site">L-ING</a> -
+                <small> &copy; <span class="year"></span> <span>L-ING</span> -
                     <a href="https://github.com/hlf20010508" target="_blank">Github</a> -
                     <a href="https://www.zhihu.com/people/huang-ling-feng-7-16" target="_blank">Zhihu</a>
                 </small>
