--- a/blog/templates/admin/manage_link.html
+++ b/blog/templates/admin/manage_link.html
@@ -12,13 +12,14 @@
             </span>
         </h1>
     </div>
-    {% if links %}
+    {% if links or navigator %}
         <table class="table table-striped">
             <thead>
             <tr>
                 <th>No.</th>
                 <th>Name</th>
                 <th>URL</th>
+                <th>Type</th>
                 <th>Actions</th>
             </tr>
             </thead>
@@ -27,6 +28,11 @@
                     <td>{{ loop.index }}</td>
                     <td>{{ link.name }}</td>
                     <td><a href="{{ link.url }}" target="_blank">{{ link.url }}</a></td>
+                    {% if link.is_navigator %}
+                        <td>Navigator</td>
+                    {% else %}
+                        <td>Public Links</td>
+                    {% endif %}
                     <td>
                         <a class="btn btn-info btn-sm" href="{{ url_for('.edit_link', link_id=link.id) }}">Edit</a>
                         <form class="inline" method="post" action="{{ url_for('.delete_link', link_id=link.id) }}">
