解决移动端个人简介界面最后一行与侧边栏贴合的bug
由于最后一行后面没没东西，所以margin-bottom为0，因此就会贴合

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -9,6 +9,7 @@
     <div class="row" style="justify-content: space-between;">
         <div class="col-sm-8 markdown-body">
             {{ about|safe }}
+            <div></div>
         </div>
         <div class="col-sm-4">
             {% include "blog/_sidebar.html" %}
