--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -111,5 +111,9 @@
     {{ moment.include_moment(local_js=url_for('static', filename='js/moment-with-locales.min.js')) }}
     {% endblock %}
     <script type="text/javascript" src="{{ url_for('static', filename='js/foot.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/highlight.min.js') }}"></script>
+    <script>
+        hljs.highlightAll();
+    </script>
 </body>
 </html>
