--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -7,12 +7,21 @@
         <h1>About</h1>
     </div>
     <div class="row" style="justify-content: space-between;">
-        <div class="col-sm-8 markdown-body">
-            {{ about|safe }}
-            <div></div>
+        <div class="col-sm-8">
+            {# 必须有一个textarea来初始化编辑器，才能调用渲染 #}
+            <div style="display: none;">
+                <textarea id="body"></textarea>
+            </div>
+            <div id="raw-content-hidden" style="display: none;">{{ about|safe }}</div>
+            <div class="markdown-body" id="raw-content"></div>
+            <div style="height: 16px;"></div>
         </div>
         <div class="col-sm-4">
             {% include "blog/_sidebar.html" %}
         </div>
     </div>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/easymde.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/axios.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/easymde.config.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/renderPost.js') }}"></script>
 {% endblock %}
