--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="col-sm-8">
             <div id="raw-content-hidden" style="display: none;">{{ post.body|safe }}</div>
-            <div class="markdown-body" id="raw-content"></div>
+            <div class="markdown-body" id="markdown-content"></div>
             <hr>
             <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target=".postLinkModal">Share
             </button>
