增加manage->clean按钮来清理无用图片

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -62,6 +62,7 @@
                                 {% endif %}
                             </a>
                             <a class="dropdown-item" href="{{ url_for('admin.manage_link') }}">Link</a>
+                            <a class="dropdown-item" href="{{ url_for('admin.clean') }}">Clean</a>
                         </div>
                     </li>
                     {% endif %}
