使用easymde v2.18.0, highlight.js 10.6.0, jquery改名

--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -58,3 +58,7 @@ code {
 .CodeMirror.cm-s-easymde.CodeMirror-wrap div textarea {
     white-space: nowrap;
 }
+
+.editor-toolbar button {
+    width: 30px;
+}
