--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/highlight.min.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/easymde.min.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/github-markdown-light.css') }}" type="text/css">
-    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.2.1.slim.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     {% endblock head %}
 </head>
 <body>
