--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -12,8 +12,8 @@
             <div style="display: none;">
                 <textarea id="body"></textarea>
             </div>
-            <div id="raw-content-hidden" style="display: none;">{{ about|safe }}</div>
-            <div class="markdown-body" id="markdown-content"></div>
+            <div class="raw-content-hidden" style="display: none;">{{ about|safe }}</div>
+            <div class="markdown-body markdown-content"></div>
             <div style="height: 16px;"></div>
         </div>
         <div class="col-sm-4">
