为预览div增加内边距，使其内边距与编辑模式下相同

--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -62,3 +62,11 @@ code {
 .editor-toolbar button {
     width: 30px;
 }
+
+.editor-preview-full {
+    padding: 10px;
+}
+
+.editor-preview-side {
+    padding: 10px;
+}
